# HW_17

./: pyproject.toml
schemas/: user.py
tests/: conftest.py  test_regres_in_login.py  test_regres_in_registration.py  test_regres_in_resource.py  test_regres_in_users.py
