[tool.poetry]
name = "hw-17"
version = "0.1.0"
description = ""
authors = ["Varganova Kate"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.2"
requests = "^2.32.3"
jsonschema = "^4.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
